feat(test): add eventException test code #75